# ebiose

./: .dockerignore  .env.example  .gitignore  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GLOSSARY.md  LICENSE  Makefile  README.md  REFACTORING_SUMMARY.md  config.py  config.yml  docker-compose.yml  main.py  model_endpoints_template.yml  pyproject.toml  pytest.ini  requirements.txt  test_llm_api_initialization.py  test_llm_api_simple.py  test_refactoring.py
docs/: astro.config.mjs  package-lock.json
docs/src/content/docs/: index.mdx
ebiose/backends/ebiose/engine/: langgraph_engine.py
ebiose/backends/langgraph/: compute_intensive_batch_processor.py  llm_api.py
ebiose/backends/langgraph copy/engine/: langgraph_engine.py
ebiose/backends/langgraph/engine/: agent_node.py  langgraph_engine.py  llm_node.py  pydantic_validator_node.py  regex_routing_node.py  routing_node.py  states.py  tool_node.py  utils.py
ebiose/cloud_client/: base_client.py  client.py  ebiose_api_client.py  mock_ebiose_endpoints.py  refactored_client.py
ebiose/cloud_client/endpoints/: __init__.py  api_key_endpoints.py  auth_endpoints.py  ecosystem_endpoints.py  forge_endpoints.py  logging_endpoints.py  user_endpoints.py
ebiose/cloud_client/facades/: __init__.py  api_facade.py
ebiose/compute_intensive_batch_processor/: compute_intensive_batch_processor.py  token_manager.py
ebiose/config/: __init__.py
ebiose/core/: agent.py  agent_engine.py  agent_engine_factory.py  agent_factory.py  agent_forge.py  ecosystem.py  events.py  evo_forging_cycle.py  forge_cycle.py  llm_api.py  llm_api_factory.py  model_endpoint.py
ebiose/core/engines/graph_engine/: edge.py  graph.py  graph_engine.py  text_utils.py  utils.py
ebiose/core/models/: __init__.py  agent_models.py  api_models.py  auth_models.py  enums.py  exceptions.py  forge_models.py
ebiose/generated_cloud_client/: __init__.py  mock_ebiose_endpoints.py  mock_ebiose_endpoints_old.py
ebiose/generated_cloud_client/api/api_key/: add_api_key.py  delete_apikeys_uuid.py  get_api_key.py  get_api_keys.py  put_apikeys_uuid.py  self_add_api_key.py  self_delete_api_key.py  self_get_api_keys.py
ebiose/generated_cloud_client/api/auth_endpoints/: login.py  refresh_token.py  self_update.py  sign_up.py  update_password.py  user_info.py
ebiose/generated_cloud_client/models/: __init__.py  agent_engine_input_model.py  agent_engine_output_model.py  agent_input_model.py  agent_output_model.py  api_key_input_model.py  api_key_output_model.py  ecosystem_input_model.py  ecosystem_output_model.py  forge_cycle_input_model.py  login_output_model.py  new_cycle_output_model.py  post_ecosystems_ecosystem_uuid_deduct_compute_banks_body.py  role.py  self_api_key_input_model.py  self_user_input_model.py  signup_input_model.py  user_input_model.py  user_output_model.py
ebiose/generated_cloud_sdk/: mock_ebiose_endpoints.py
ebiose/llm_api/: ebiose.py  langchain.py  llm_api.py  token_manager.py
ebiose/tools/: agent_generation_task_with_fallback.py  embedding_helper.py  json_schema_to_pydantic.py  llm_token_cost.py  model_prices_and_context_window.json
examples/math_forge/: evaluate.py  gsm8k_test.csv  math_forge.py  run.py
examples/math_forge_xp/: gsm8k_train.csv  math_forge.py  run.py
notebooks/: create_your_own_forge.ipynb  ebiose_agent_basics.ipynb  quickstart.ipynb  test_forges.py  test_langchain_litellm.py  troubleshooting.ipynb
tests/: __init__.py  test_cloud_agents.py  test_forge.py  test_forge_with_existing_ecosystem.py  test_litellm.py  test_llm_api_initialization.py  test_llm_api_simple.py
tests/backends/langgraph/: test_langgraph_llm_api.py
tests/cloud_client/: test_client.py  test_ebiose_api_client.py
tests/core/: test_agent.py  test_agent_engine.py  test_agent_engine_factory.py  test_agent_factory.py  test_agent_forge.py  test_ecosystem.py  test_events.py  test_forge_cycle.py  test_llm_api.py  test_llm_api_factory.py  test_model_endpoint.py
tests/core/engines/: test_graph_engine.py
tests/tools/: test_agent_generation_task_with_fallback.py  test_embedding_helper.py  test_json_schema_to_pydantic.py  test_llm_token_cost.py
(+55 files in other folders)
